--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,17 @@
 {
-    "name": "doctrine/dbal",
+    "name": "vortgo/dbal-laravel-enum",
     "type": "library",
-    "description": "Database Abstraction Layer",
-    "keywords": ["dbal", "database", "persistence", "queryobject"],
+    "description": "DBAL package for laravel migrations. Added field type - enum",
+    "keywords": ["dbal", "database", "persistence", "queryobject", "laravel", "enum"],
     "homepage": "http://www.doctrine-project.org",
     "license": "MIT",
-    "authors": [
-        {"name": "Guilherme Blanco", "email": "guilhermeblanco@gmail.com"},
-        {"name": "Roman Borschel", "email": "roman@code-factory.org"},
-        {"name": "Benjamin Eberlei", "email": "kontakt@beberlei.de"},
-        {"name": "Jonathan Wage", "email": "jonwage@gmail.com"}
-    ],
     "require": {
-        "php": ">=5.3.2",
-        "doctrine/common": ">=2.4,<2.7-dev"
+        "php": "^5.6 || ^7.0",
+        "doctrine/common": "~2.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
+        "phpunit/phpunit": "^5.4.6",
+        "phpunit/phpunit-mock-objects": "!=3.2.4,!=3.2.5",
         "symfony/console": "2.*||^3.0"
     },
     "suggest": {
@@ -26,9 +21,12 @@
     "autoload": {
         "psr-0": { "Doctrine\\DBAL\\": "lib/" }
     },
+    "autoload-dev": {
+        "psr-0": { "Doctrine\\Tests\\": "tests/" }
+    },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.5.x-dev"
+            "dev-master": "2.6.x-dev"
         }
     },
     "archive": {
