--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "phpunit/phpunit-mock-objects": "!=3.2.4,!=3.2.5",
         "symfony/console": "2.*||^3.0"
     },
+    "replace": {
+        "doctrine/dbal":"*"
+    },
     "suggest": {
         "symfony/console": "For helpful console commands such as SQL execution and import of files."
     },
