--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "homepage": "http://www.doctrine-project.org",
     "license": "MIT",
     "require": {
-        "php": "^5.6 || ^7.0",
-        "doctrine/common": "~2.4"
+        "php": "^5.6 || ^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.4.6",
